added index.html to navbar brand

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,10 +7,10 @@
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Milestone</title>
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light border border-secondary rounded p-0 my-md-4">
+<body data-spy="scroll" data-target=".navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border border-secondary rounded p-0  fixed-top">
     <div class="container px-0 px-md-0">
-        <a class="navbar-brand" href="#"><b>Home</b></a>
+        <a class="navbar-brand" href="index.html"><b>Home</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarAltMarkup"
                 aria-controls="navbarAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,8 +31,8 @@
         <div class="row">
             <div class="col py-3 mx-auto">
                 <h1>Azul Flawen!</h1>
-                <p> This means "Peace be upon you" in my native language. I'm Massimo Bouchentouf,
-                    originally from Southern Morocco and I love to build things on the web. As a Fullstack Developer
+                <p> This means "Hello!" in my native language. I'm Massimo Bouchentouf,
+                    originally from Morocco and I love to build things on the web. As a Fullstack Developer
                     I enjoy problem solving on the server and client side.</p>
             </div>
             <div class="text-center col-md-6 offset-md-6">
@@ -44,19 +44,18 @@
 </section>
 
 <section class="my-md-5 bg-secondary">
-    <div class="container">
+    <div id="MyStory" class="container">
         <div class="row">
             <div class="col">
                 <h2>My Story</h2>
-                <p>I initially started my Web development training in years 10 years ago, but I had the fortunate luck
-                    being granted the Immigrant Visa to come to the US. So after gaining work experience in different fields
-                    I decided to return to my initial interest. My 1st 6 months in the US I worked as a construction worker,
-                    painting, demolition, windows ... that's when my friend offered me a job working for Sammy Sosa as a
-                    warehouse worker. During that period I obtained my forklift operation certificate, which lead me to be
+                <p>I initially started my Web development training 10 years ago, but I had the fortunate luck
+                    being granted the Visa to come to the US. So after gaining work experience in different fields
+                    I decided to return to my initial interest. I worked as a construction worker, then I got a job at manufacturing company as a
+                    warehouse worker. During that period I obtained my forklift operation certificate, which led me to be
                     the warehouse supervisor and the operator of the steel machine that manufactures bundles of steel we used
                     to ship to South America so the rest of the crew put these pieces together to build Anti-Disaster houses
                     for low income families. After that I decided to join the restaurant field, I worked as a busboy, then
-                    as a cook, sous chef back in South Florida, and I ended up as kitchen supervisor in Sunport Airport when
+                    a cook, and I ended up as kitchen supervisor in Sunport Airport when
                     I moved to Albuquerque in 2017. After that I applied to Baillos and I worked there as a delivery driver
                     and as an appliances installer; fridges, dishwashers, dryers, Tvs ...</p>
             </div>
@@ -64,62 +63,61 @@
     </div>
 </section>
 
-<div class="container py-3 bg-light">
+<div id="MyWork" class="container py-3 bg-light">
     <div class="row">
-        <div class="col"><h2></h2></div>
+        <div class="col">
+            <h2>My Work</h2>
     </div>
     <div class="row justify-content-between">
         <div class="col-md-3 card border-0">
-            <img src="html.png" class="rounded-circle card-img-top img-fluid" alt="html" height="300" width="300">
+            <img src="documentation/html.png" class="rounded-circle card-img-top img-fluid" alt="html" height="300" width="300">
             <div class="card-body text-center">
                 <h5 class="card-title">HTML5</h5>
-                <p class="card-text">
-                    HTML is the 1st coding language I've learned, HTML, in full hypertext markup language, a formatting
-                    system for displaying material retrieved over the Internet. Each retrieval unit is known as a Web
-                    page (from World Wide Web), and such pages frequently contain hypertext links that allow related
-                    pages to be retrieved.
-                </p>
             </div>
         </div>
         <div class="col-md-3 card border-0">
-            <img src="css.png" class="rounded-circle card-img-top img-fluid" alt="css" height="300" width="300">
+            <img src="documentation/css.png" class="rounded-circle card-img-top img-fluid" alt="css" height="300" width="300">
             <div class="card-body text-center">
                 <h5 class="card-title">CSS</h5>
-                <p class="card-text">CSS is the 2nd language I learn to use and it is acronym of “Cascading Style Sheets
-                    ”. CSS is a computer language for laying out and structuring web pages (HTML or XML). This language
-                    contains coding elements and is composed of these “cascading style sheets” which are equally called
-                    CSS files.</p>
             </div>
         </div>
         <div class="col-md-3 card border-0">
-            <img src="icon-botsrap-1.png" class="rounded-circle card-img-top img-fluid" alt="bootstrap" height="300" width="300">
+            <img src="documentation/icon-botsrap-1.png" class="rounded-circle card-img-top img-fluid" alt="bootstrap" height="300" width="300">
             <div class="card-body text-center">
                 <h5 class="card-title">Bootstrap 5</h5>
-                <p class="card-text">Bootstrap is the 3rd coding language I've learned to use building mobile responsive websites and it is a free and open
-                    source front end development framework for the creation of websites and web apps. Its framework is
-                    built on HTML, CSS, and JavaScript (JS) to facilitate the development of responsive, mobile-first
-                    sites and apps</p>
             </div>
         </div>
         <div class="col-md-3 card border-0">
-            <img src="jsnode2.png" class="rounded-circle card-img-top img-fluid" alt="js node" height="300" width="300">
+            <img src="documentation/jsnode2.png" class="rounded-circle card-img-top img-fluid" alt="js node" height="300" width="300">
             <div class="card-body text-center">
                 <h5 class="card-title">Node JS</h5>
-                <p class="card-text">Node. js (Node) is the open source development platform for executing JavaScript
-                    code server-side. I learned and because it is useful for developing applications that require a
-                    persistent connection from the browser to the server and is often used for real-time applications
-                    such as chat, news feeds and web push notifications.</p>
             </div>
         </div>
         <div class="col-md-3 card border-0">
-            <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
+            <img src="documentation/jsreact.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
             <div class="card-body text-center">
                 <h5 class="card-title">React Js</h5>
-                <p class="card-text">React. js is an open-source JavaScript library that I learned for building user
-                    interfaces specifically for single-page applications. For me it is useful for handling the view
-                    layer for web and mobile apps. React also allows us to create reusable UI components..</p>
             </div>
         </div>
+        <div class="col-md-3 card border-0">
+            <img src="documentation/docker.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
+            <div class="card-body text-center">
+                <h5 class="card-title">Docker</h5>
+            </div>
+        </div>
+        <div class="col-md-3 card border-0">
+            <img src="documentation/mysql-logo%20(1).png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
+            <div class="card-body text-center">
+                <h5 class="card-title">MySQL</h5>
+            </div>
+        </div>
+        <div class="col-md-3 card border-0">
+            <img src="documentation/digitalocean.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
+            <div class="card-body text-center">
+                <h5 class="card-title">DigitalOcean</h5>
+            </div>
+        </div>
+    </div>
     </div>
 </div>
 
@@ -129,7 +127,7 @@
             <div class="contact col-md-6">
 
                 <!-- BEGIN CONTACT FORM -->
-                <h2>testing 123</h2>
+                <h2>Contact Me</h2>
                 <div></div>
                 <form action="./apis/" id="contact" method="post" novalidate>
                     <div class="form-group">
@@ -170,9 +168,9 @@
                                       rows="5"></textarea>
                         </div>
                     </div>
-                    <div class="g-recaptcha" data-sitekey="6LdWUVQaAAAAAJlwYX8YosD5R-c_PQ0kyebdlGW5"></div>
+
                     <!-- Make sure to add site key provided by google recaptcha -->
-                    <!--  <div class="g-recaptcha" data-sitekey=""></div> -->
+                    <div class="g-recaptcha" data-sitekey="6LcJWOgaAAAAAFN4HM1I3DJi67uhB5xUSi9HNz-r"></div>
                     <button class="btn btn-info" type="submit">Submit</button>
                     <button class="btn btn-default" type="reset">Reset</button>
                 </form>
