--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Massimo Bouchentouf</title>
 </head>
 <body data-spy="scroll" data-target=".navbar">
 <nav class="navbar navbar-expand-lg text-white navbar-dark bg-primary border border-secondary rounded-bottom p-0  fixed-top">
     <div class="container px-0 px-md-0">
-        <a class="navbar-brand" href="index.html"><b>Home</b>
+        <a class="navbar-brand" href="index.html">
         <img src="documentation/am.png" alt="brand logo" height="50" width="50"
              class="rounded-circle d-inline-block">
+            Home
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarAltMarkup"
                 aria-controls="navbarAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +25,7 @@
 
         <div class="collapse navbar-collapse" id="navbarAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-link" href="#my-story"><b>My Story</b></a>
+                <a class="nav-link" href="#About"><b>My Story</b></a>
                 <a class="nav-link" href="#my-work"><b>My Work</b></a>
                 <a class="nav-link" href="#contact-me"><b>Contact Me</b></a>
             </div>
@@ -30,15 +33,15 @@
     </div>
 </nav>
 
-<section class="jumbotron d-flex justify-content-center bg-light py-5">
+<section class="jumbotron d-flex justify-content-center bg-transparent py-5">
     <div class="container">
         <div class="row">
             <div class="col py-3 mx-auto">
                 <h1>Azul Flawen!</h1>
-                <p> This means "Hello!" in my native language. I'm Massimo Bouchentouf,
-                    originally from Morocco and I love to build things on the web. As a Fullstack Developer
-                    I enjoy problem solving on the server and client side.Creative and always looking to gain and learn
-                    more everyday.</p>
+                <p> This means "Hello World!" in my native language.Full Stack Developer with experience designing,
+                    developing, and implementing applications and solutions using a range of technologies and
+                    programming languages. Seeking to leverage my development experience and hands-on technical
+                    expertise in a challenging role as a Front-End Developer and always opened to learn new things.
             </div>
             <div class="text-center col-md-6 offset-md-6">
                 <h2>Massimo Bouchentouf </h2>
@@ -49,7 +52,7 @@
 </section>
 
 <section class="my-md-5 bg-secondary">
-    <div id="my-story" class="container">
+    <div id="About" class="container">
         <div class="row">
             <div class="col">
                 <h2>My Story</h2>
@@ -68,7 +71,7 @@
 </section>
 
 <div id="my-work">
-<div class="container py-3 bg-light">
+<div class="container py-3 bg-transparent">
     <div class="row">
         <div class="col">
             <h2>My Work</h2>
