aligned navbar icon and edited Welcome text

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarAltMarkup">
             <div class="navbar-nav ml-auto">
                 <a class="nav-link" href="#About"><b>My Story</b></a>
-                <a class="nav-link" href="#my-work"><b>My Work</b></a>
+                <a class="nav-link" href="#my-work"><b>My Skills</b></a>
                 <a class="nav-link" href="#contact-me"><b>Contact Me</b></a>
             </div>
         </div>
