--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,7 +25,7 @@
 
         <div class="collapse navbar-collapse" id="navbarAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-link" href="#About"><b>My Story</b></a>
+                <a class="nav-link" href="#About"><b>About Me</b></a>
                 <a class="nav-link" href="#my-work"><b>My Skills</b></a>
                 <a class="nav-link" href="#contact-me"><b>Contact Me</b></a>
             </div>
